force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/Markets_and_Competitors__c.object-meta.xml
<CustomObject>
    <label>Markets and Competitors</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets and Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>