force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Skidsteer loader</fullName>
            </value>
            <value>
                <fullName>GSE</fullName>
            </value>
            <value>
                <fullName>Port equipment</fullName>
            </value>
            <value>
                <fullName>Skidsteer</fullName>
            </value>
            <value>
                <fullName>Metal Equip</fullName>
            </value>
            <value>
                <fullName>Cleaning Equip</fullName>
            </value>
            <value>
                <fullName>Agri Implement</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Rotator</fullName>
            </value>
            <value>
                <fullName>Tow Tug</fullName>
            </value>
            <value>
                <fullName>Platform Truck</fullName>
            </value>
            <value>
                <fullName>Backhoe Solid</fullName>
            </value>
            <value>
                <fullName>Indl Trolley</fullName>
            </value>
            <value>
                <fullName>Temple Trolley</fullName>
            </value>
            <value>
                <fullName>Indl Trailer</fullName>
            </value>
            <value>
                <fullName>others pl specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>