force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/fields/Related_to__c.field-meta.xml
<CustomField>
    <fullName>Related_to__c</fullName>
    <label>Related to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market info</fullName>
            </value>
            <value>
                <fullName>Competitor Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>