force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/fields/Related_to_Category__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Category__c</fullName>
    <label>Related to - Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Channel Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>