force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/fields/Remarks_if_any__c.field-meta.xml
<CustomField>
    <fullName>Remarks_if_any__c</fullName>
    <label>Remarks - if any</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>