force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/fields/Source_Ref__c.field-meta.xml
<CustomField>
    <fullName>Source_Ref__c</fullName>
    <label>Source Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>