force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/fields/Subject_Related_to__c.field-meta.xml
<CustomField>
    <fullName>Subject_Related_to__c</fullName>
    <label>Subject - Related to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Feedbacks</fullName>
            </value>
            <value>
                <fullName>New Product  Intro</fullName>
            </value>
            <value>
                <fullName>Product promo</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>New size opportunities</fullName>
            </value>
            <value>
                <fullName>New Product opportunities</fullName>
            </value>
            <value>
                <fullName>Expo/Trade fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>