force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>East A</fullName>
            </value>
            <value>
                <fullName>East B</fullName>
            </value>
            <value>
                <fullName>East C</fullName>
            </value>
            <value>
                <fullName>East O</fullName>
            </value>
            <value>
                <fullName>North A</fullName>
            </value>
            <value>
                <fullName>North B</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>South A</fullName>
            </value>
            <value>
                <fullName>South B</fullName>
            </value>
            <value>
                <fullName>South C</fullName>
            </value>
            <value>
                <fullName>West A</fullName>
            </value>
            <value>
                <fullName>West B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>