force-app/force-app/force-app/main/default/objects/Markets_and_Competitors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Zone__c</columns>
    <columns>Executive__c</columns>
    <columns>Subject_Related_to__c</columns>
    <columns>Related_to_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>